@@ -3686,6 +3686,11 @@ hr {
   background-repeat: no-repeat;
 }
 
+.bg-transparent, .bg-transparent\:hover:hover,
+.anchor:hover .bg-transparent\:hover {
+  background-color: transparent;
+}
+
 .bg-black {
   background-color: #040404;
   background-color: var(--black);
