@@ -48,6 +48,7 @@
             <li><a class="inlineblock ul:hover" href="#position">Position</a></li>
             <li><a class="inlineblock ul:hover" href="#repeat">Repeat</a></li>
             <li><a class="inlineblock ul:hover" href="#size">Size</a></li>
+            <li><a class="inlineblock ul:hover" href="#keywords">Keywords</a></li>
             <li><a class="inlineblock ul:hover" href="#black">Black</a></li>
             <li><a class="inlineblock ul:hover" href="#white">White</a></li>
             <li><a class="inlineblock ul:hover" href="#accents">Accents</a></li>
@@ -90,6 +91,19 @@
             <h2>Size</h2>
             <pre><code>.bg-cover   { background-size: cover;   }
 .bg-contain { background-size: contain; }
+</code></pre>
+          </div>
+        </div></section>
+
+        <section id="keywords" class="py1 md-px1 md-py2"><div class="py05">
+          <div class="copy lh4">
+            <h2>Keywords</h2>
+            <pre><code><span class="o50">/* transparent */</span>
+.bg-transparent,
+.bg-transparent\:hover:hover,
+.anchor:hover .bg-transparent\:hover {
+  background-color: transparent;
+}
 </code></pre>
           </div>
         </div></section>
